--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">fteam</string>
+
+    <string name="naviMenu_home">HOME</string>
+    <string name="naviMenu_rank">RANKING</string>
+    <string name="naviMenu_playlist">PLAYLIST</string>
+    <string name="naviMenu_history">HISTORY</string>
+    <string name="naviMenu_upload">UPLOAD</string>
 </resources>
