--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">fteam</string>
+    <string name="intro_message">
+        <![CDATA[
+            This sample demonstrates how to record video using Camera2 API.
+        ]]>
+    </string>
 
     <string name="naviMenu_home">HOME</string>
     <string name="naviMenu_rank">RANKING</string>
@@ -8,4 +13,9 @@
     <string name="naviMenu_upload">UPLOAD</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="record">Record</string>
+    <string name="stop">Stop</string>
+    <string name="description_info">Info</string>
+    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
+    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
 </resources>
